# signal-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
authelia/: signal-mcp-client.yml
signal-mcp-server/: db.py  main.py  pyproject.toml  receiver.py  signal_backend.py  signal_store.py
traefik/: signal-mcp-oauth.yml  signal-mcp.yml
