[project]
name = "signal-mcp-server"
version = "0.1.0"
description = "Signal MCP server (read + search + send) on top of signal-cli-rest-api, with Authelia OIDC auth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.28.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "starlette>=0.46.0",
    "websocket-client>=1.8.0",
]

[tool.setuptools]
py-modules = ["main", "signal_store", "signal_backend", "receiver", "db"]
